# denai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  codecov.yml  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: spec-driven.agent.md
.github/codeql/: codeql-config.yml
.github/prompts/: inject-guidelines.prompt.md
.github/skills/project-guidelines-writer/: SKILL.md
.github/skills/spec-driven-requirements-writer/: SKILL.md
.github/skills/spec-driven-task-decomposer/: SKILL.md
.github/skills/spec-driven-task-implementer/: SKILL.md
.github/skills/spec-driven-technical-designer/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  electron.yml  publish.yml
denai/: __init__.py  __main__.py  agent.py  app.py  commands.py  config.py  context_store.py  db.py  export_html.py  logging_config.py  marketplace.py  modes.py  network.py  permissions.py  personas.py  profile_manager.py  project.py  providers_store.py  skills.py  system_profile.py  undo.py  version.py  voice.py
denai/examples/commands/: explain.md  review.md  test.md
denai/examples/skills/: code-review.md  debug.md  git-workflow.md
denai/llm/: __init__.py  context.py  ollama.py  prompt.py  providers.py
denai/mcp/: __init__.py  client.py  protocol.py
denai/personas_bundled/: data.md  reviewer.md  security.md  writer.md
denai/plugins/: __init__.py
denai/rag/: __init__.py
denai/routes/: __init__.py  agent.py  chat.py  commands.py  context.py  conversations.py  diagnostics.py  feedback.py  marketplace.py  mcp.py  memories.py  models.py  permissions.py  personas.py  plans.py  plans_spec.py  plugins.py  profiles.py  project.py  questions.py  rag.py  skills.py  specs.py  system.py  todos.py  ui.py  undo.py  update.py  voice.py
denai/security/: __init__.py  auth.py  command_filter.py  rate_limit.py  sandbox.py  url_validator.py
denai/static/: login.html  ui.html
denai/static/css/: animations.css  base.css  chat.css  components.css  layout.css  tailwind.css
denai/static/js/: api.js  chat.js  commands.js  config.js  conversations.js  feedback.js  helpers.js  marketplace.js  models.js  modes.js  ui.js  voice.js
denai/tools/: __init__.py  command.py  command_exec.py  documents.py  file_ops.py  git_ops.py  grep.py  memory.py  planning.py  plans_spec.py  question.py  rag_search.py  registry.py  specs_analyzer.py  subagent.py  suggestions.py  think.py  todowrite.py  web_fetch.py  web_search.py
docs/: API.md  CONFIGURATION.md  GUIA-COMPLETO.md  INSTALLATION.md  PERSONAS.md  PROVIDERS.md  README.md  SECURITY.md  TOOLS.md
electron/: .gitignore  README.md  forge.config.js  package-lock.json  package.json
electron/scripts/: sync-version.js
electron/src/: main.js  preload.js  splash.html  splash.js
examples/plugins/: calculator.py
examples/plugins/weather_plugin/: main.py  plugin.json
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: input.css
frontend/src/custom/: chat.css  components.css  layout.css  utilities.css
scripts/: compartilhar.bat  iniciar.bat  instalar.bat  instalar.ps1
specs/changes/v0.12.0-agentic-workflows/: design.md  requirements.md  tasks.md
specs/changes/v0.13.0-memory-plans-spec/: design.md  requirements.md  tasks.md
specs/changes/v0.14.0-todowrite/: design.md  requirements.md  tasks.md
specs/changes/v0.15.0-subagents/: design.md  requirements.md  tasks.md
specs/changes/v0.16.0-suggestions/: design.md  requirements.md  tasks.md
specs/changes/v0.17.0-providers/: design.md  requirements.md  tasks.md
specs/changes/v0.18.0-update-restart/: design.md  requirements.md  tasks.md
specs/changes/v0.19.0-feedback/: design.md  requirements.md  tasks.md
specs/changes/v0.20.0-smart-model/: design.md  requirements.md  tasks.md
specs/changes/v0.21.0-electron/: design.md  requirements.md  tasks.md
specs/changes/v0.23.0-context-command/: design.md  requirements.md  tasks.md
specs/changes/v0.23.0-tailwind-vite/: design.md  requirements.md
specs/changes/v0.25.0-profiles/: design.md  requirements.md  tasks.md
specs/changes/v0.25.0-specs-command/: design.md  requirements.md  tasks.md
specs/changes/v0.26.0-electron-ux/: design.md  requirements.md  tasks.md
specs/changes/v0.27.0-agent-notification/: design.md  requirements.md  tasks.md
specs/changes/v0.27.0-specs-analyze/: requirements.md
specs/changes/v0.27.0-tailwind-fase2/: requirements.md
tests/: conftest.py  test_agent.py  test_auth.py  test_command_filter.py  test_commands.py  test_context.py  test_context_store.py  test_core_tools.py  test_documents.py  test_export_html.py  test_fase2.py  test_feedback.py  test_git_ops.py  test_improvements.py  test_logging.py  test_marketplace.py  test_mcp.py  test_memory_list_plans_spec.py  test_middleware.py  test_modes.py  test_permissions.py  test_plans.py  test_plugins.py  test_profiles_specs.py  test_project.py  test_project_persistence.py  test_providers.py  test_providers_store.py  test_rag.py  test_rate_limit.py  test_sandbox.py  test_skills.py  test_specs.py  test_subagent.py  test_suggestions.py  test_system_profile.py  test_todowrite.py  test_tools.py  test_undo.py  test_update.py  (+1 more)
