[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "denai"
version = "0.3.0"
description = "🐺 Your private AI den. Local LLM assistant with tools, memory and zero cloud dependency."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rodrigo Gobbo", email = "rodrigo@gobbo.dev" },
]
keywords = ["ai", "llm", "ollama", "local", "assistant", "tools", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.8",
    "build",
]

[project.urls]
Homepage = "https://github.com/rodrigogobbo/denai"
Repository = "https://github.com/rodrigogobbo/denai"
Issues = "https://github.com/rodrigogobbo/denai/issues"
Changelog = "https://github.com/rodrigogobbo/denai/releases"

[project.scripts]
denai = "denai.__main__:main"

[tool.hatch.build.targets.sdist]
include = [
    "denai/",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["denai"]

[tool.hatch.build]
artifacts = [
    "denai/static/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
per-file-ignores = {"denai/routes/ui.py" = ["E501"]}
