[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "denai"
dynamic = ["version"]
description = "🐺 Your private AI den. Local LLM assistant with tools, memory and zero cloud dependency."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rodrigo Gobbo", email = "rodrigo@gobbo.dev" },
]
keywords = ["ai", "llm", "ollama", "local", "assistant", "tools", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
voice = ["openai-whisper>=20231117"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "build",
]

[project.urls]
Homepage = "https://github.com/rodrigogobbo/denai"
Repository = "https://github.com/rodrigogobbo/denai"
Issues = "https://github.com/rodrigogobbo/denai/issues"
Changelog = "https://github.com/rodrigogobbo/denai/releases"

[project.scripts]
denai = "denai.__main__:main"

[tool.hatch.version]
path = "denai/version.py"
pattern = 'VERSION = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "denai/",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["denai"]

[tool.hatch.build]
artifacts = [
    "denai/static/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "N",    # pep8-naming
]
ignore = [
    "S110",   # try-except-pass — intentional in many graceful degradation paths
    "S112",   # try-except-continue — intentional in batch processing loops
    "SIM105", # contextlib.suppress — stylistic, try/except is clearer for us
]

[tool.ruff.lint.per-file-ignores]
"denai/routes/ui.py" = ["E501"]
"denai/llm/prompt.py" = ["E501"]
"denai/llm/ollama.py" = ["E501"]
"tests/**" = ["S101", "S105", "S106", "S108", "B008", "SIM117", "N806"]
